<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AP List</string>
    <string name="hotspot_active">Hotspot On</string>
    <string name="hotspot_inactive">Hotspot Off</string>
    <string name="settings">Settings</string>
    <string name="general_settings_group">General Settings</string>
    <string name="widget_settings_group">Widget Settings</string>
    <string name="general_settings_group_key">general_settings</string>
    <string name="widget_settings_group_key">widget_settings</string>
    <string name="merge_access_points">Merge Access Points</string>
    <string name="merge_access_points_summary">Only show the access point with best reception for each wifi network
    </string>
    <string name="menu_settings">Settings</string>
    <string name="menu_wifi_settings">Wifi Settings</string>
    <string name="wifi_list_item_ssid">Wifi SSID</string>
    <string name="wifi_list_item_bssid">Wifi BSSID</string>
    <string name="wifi_list_item_level">-0</string>
    <string name="wifi_list_item_level_label">dbm</string>
    <string name="wifi_list_item_signal_strength_desc">Wifi signal strength</string>
    <string name="show_hotspot_toggle">Show HotSpot Toggle</string>
    <string name="widget_wifi_toggle">Toogle WIFI On/Off</string>
    <string name="widget_hotspot_toggle">Toggle HotSpot On/Off</string>
    <string name="widget_title">Wifi Networks</string>
    <string name="widget_wifi_scan">Scan for Wifi networks</string>
    <string name="widget_toggle_msg_hotspot">Click to turn off HotSpot</string>
    <string name="widget_toggle_msg_wifi">Click to turn on wifi</string>

    <string name="prefs_show_main_hotspot_toggle">show_main_hotspot_toggle</string>
    <string name="prefs_merge_access_points">merge_access_points</string>

    <string name="walled_garden">This connection requires login.\nClick to launch browser.</string>

    <string-array name="theme_names">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="theme_values">
        <item>1</item>
        <item>2</item>
    </string-array>


</resources>
