<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="@string/prefs_merge_access_points"
            android:title="@string/merge_access_points"
            android:summary="@string/merge_access_points_summary"
            android:defaultValue="false"/>
    <CheckBoxPreference
            android:key="show_main_hotspot_toggle"
            android:title="@string/show_hotspot_toggle"
            android:defaultValue="true"/>
    <ListPreference android:key="theme"
                    android:title="Theme"
                    android:entries="@array/theme_names"
                    android:entryValues="@array/theme_values"
                    android:defaultValue="1"/>
</PreferenceScreen>