<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
    <TextView
            android:id="@+id/ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:paddingTop="6dp"
            android:text="@string/wifi_list_item_ssid"
            />
    <ImageView
            android:id="@+id/signal_strength"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/signal_strength_ok"
            android:contentDescription="@string/wifi_list_item_signal_strength_desc"/>
    <TextView
            android:id="@+id/connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_toLeftOf="@id/signal_strength"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/wifi_list_item_connected"/>
    <TextView
            android:id="@+id/bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ssid"
            android:layout_alignParentLeft="true"
            android:paddingLeft="4dp"
            android:textSize="12dp"
            android:textColor="@color/list_item_sub_heading"
            android:text="@string/wifi_list_item_bssid"/>
    <TextView
            android:id="@+id/level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signal_strength"
            android:layout_alignParentRight="true"
            android:textSize="8dp"
            android:text="@string/wifi_list_item_level_label"/>
    <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signal_strength"
            android:layout_toLeftOf="@id/level_label"
            android:textSize="8dp"
            android:text="@string/wifi_list_item_level"/>
</RelativeLayout>