<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/APListTheme.widget.Light">

    <RelativeLayout
        android:id="@+id/widget_header"
        style="@style/APListTheme.widget.header.Light">

        <ImageButton
            android:id="@+id/widget_wifi_toggle"
            style="@style/APListTheme.widget.header.icon.Light"
            android:src="@drawable/ic_signal_strength_best"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/widget_wifi_toggle"/>

        <ImageButton
            android:id="@+id/widget_wifi_scan"
            style="@style/APListTheme.widget.header.icon.Light"
            android:src="@drawable/ic_wifi_scan_active"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/widget_wifi_scan"/>
    </RelativeLayout>

    <RelativeLayout
        style="@style/APListTheme.widget.content.Light"
        android:layout_below="@id/widget_header">

        <TextView
            android:id="@+id/widget_main_toggle_text"
            style="@style/APListTheme.widget.content.toggletext.Light"
            android:text="@string/widget_toggle_msg_wifi" />

        <ImageButton
            android:id="@+id/widget_main_toggle"
            style="@style/APListTheme.widget.content.toggleimg.Light"
            android:src="@drawable/ic_widget_wifi_toggle"
            android:contentDescription="@string/widget_wifi_toggle" />
    </RelativeLayout>
</RelativeLayout>