<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/APListTheme.widget.Dark"
        android:background="@drawable/widget_background"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_marginBottom="@dimen/widget_margin_bottom"
        android:layout_marginLeft="@dimen/widget_margin_left"
        android:layout_marginRight="@dimen/widget_margin_right">
    <RelativeLayout
            android:id="@+id/widget_header"
            style="@style/APListTheme.widget.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_heading_background_dark">
        <ImageButton
                android:id="@+id/widget_wifi_toggle"
                style="@style/APListTheme.widget.Dark"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_signal_strength_best"
                android:background="@android:color/transparent"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/widget_wifi_toggle"/>
        <ImageButton
                android:id="@+id/widget_wifi_scan"
                style="@style/APListTheme.widget.Dark"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_wifi_scan_active"
                android:background="@android:color/transparent"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/widget_wifi_scan"/>
        <ImageButton android:id="@+id/widget_hotspot_toggle"
                     style="@style/APListTheme.widget.Dark"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_menu_hotspot_inactive"
                     android:scaleType="centerInside"
                     android:layout_alignParentRight="true"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/widget_hotspot_toggle"
                />
    </RelativeLayout>
    <RelativeLayout
            style="@style/APListTheme.widget.Dark"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@id/widget_header"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/widget_list_background_dark"
            >
        <TextView android:id="@+id/widget_main_toggle_text"
                  style="@style/APListTheme.widget.Dark"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:textColor="#ffffff"
                  android:text="@string/widget_toggle_msg_wifi"
                  android:textSize="12dp"
                  android:layout_alignParentBottom="true"
                  android:layout_marginBottom="18dp"/>
        <ImageButton android:id="@+id/widget_main_toggle"
                     style="@style/APListTheme.widget.Dark"
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_widget_wifi_toggle"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/widget_wifi_toggle"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
                     android:layout_marginBottom="30dp"/>
    </RelativeLayout>
</RelativeLayout>