<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_marginBottom="@dimen/widget_margin_bottom"
        android:layout_marginLeft="@dimen/widget_margin_left"
        android:layout_marginRight="@dimen/widget_margin_right">
    <RelativeLayout
            android:id="@+id/widget_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_background">
        <ImageButton
                android:id="@+id/widget_wifi_toggle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_signal_strength_best"
                android:background="@android:color/transparent"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/widget_wifi_toggle"/>
        <ImageButton
                android:id="@+id/widget_wifi_scan"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_wifi_scan_active"
                android:background="@android:color/transparent"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/widget_wifi_scan"/>
        <ImageButton android:id="@+id/widget_hotspot_toggle"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_menu_hotspot_inactive"
                     android:scaleType="centerInside"
                     android:layout_alignParentRight="true"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/widget_hotspot_toggle"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@id/widget_header"
            android:background="@android:color/background_dark"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        <ListView android:id="@+id/widget_listview"
                  android:layout_height="match_parent"
                  android:layout_width="match_parent"/>
        <TextView android:id="@+id/empty_view"
                  android:layout_height="match_parent"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:visibility="gone"
                  android:textColor="#ffffff"
                  android:text=""
                  android:textSize="20dp"/>
    </RelativeLayout>
</RelativeLayout>